chore(scripts): update start-all.bat